src/components/FeedbackForm/FeedbackForm.module.scss
@use "@/styles/variables" as *;
$error-color: #ea4335;

.feedbackForm {
  max-width: 480px;
  display: flex;
  flex-direction: column;
  gap: 40px;
  padding-top: 22px;
  flex-grow: 1;
}

.feedbackButton {
  display: flex;
  justify-content: center;
  align-items: center;
}
.feedbackButtonText {
  padding-right: 2rem;
  color: $black-color;
  margin-right: 8px;
  font-size: 16px;
  text-decoration: none;
}

.iconContainer {
  height: 59px;
  width: 59px;
  background-color: $grey-color;
  border-radius: 50%;
  display: flex;
  margin-right: 1px;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 2px;
  right: 2px;
}

.feedbackInputContainer {
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding-bottom: 30px;
  position: relative;
}

.feedbackInputLabel {
  font-size: 1.375rem;
  display: flex;
  align-items: center;
}

.feedbackInput {
  border: 1px solid #1b1d20;
  border-radius: 25px;
  background: rgba(255, 255, 255, 0.05);
  outline: none;
  padding: 12px;
  font-size: 1.125rem;
  color: inherit;
  width: 100%;
  position: relative;
  z-index: 1;
  transition: all $transition-speed $transition-style;

  &:hover {
    border-color: $yellow-color;
    box-shadow: 0px 4px 20px 0px #fbbc054d;
  }

  &:focus {
    border-color: $yellow-color;
    border-radius: 15px;
  }

  &.inputError {
    border-color: $error-color;
  }
}

.inputErrorText {
  position: absolute;
  bottom: 5px;
  font-weight: 100;
  font-size: 1rem;
  color: $error-color;
}

.phoneNumberInputContainer {
  position: relative;
}

.inputIconStar {
  margin-left: auto;
}

.inputIconPhone {
  position: absolute;
  top: 50%;
  right: 12px;
  transform: translateY(-50%);
}

.feedbackForm button {
  width: 199px;
  height: 62px;
}

@media (max-width: $breakpoint-tablet) {
  .feedbackForm {
    max-width: 360px;
  }
}

